tests/errors/test_67.x
// No such type in module

import "standard.x" as std;

fn main() -> int {

    let x = std::B { 2 };

}